--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -38,6 +38,7 @@ $background-dark: #333;
 $background-light: #fff;
 
 $overlay: linear-gradient(60deg, #29323c 0%, #485563 100%);
+$overlay-btn: linear-gradient(0deg, #20262e, #485563 );
 $overlay-blue-dark:#29323c;
 $overlay-blue-darker:#20262e;
 $overlay-blue-light: #485563;
