--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -5,29 +5,29 @@
         flex-direction: column;
         width: 100%;
         margin: 0 auto;
-        padding: 0 0 20vh 0;
+        padding: 0 0 10vh 0;
         background-color: $background-light;
         position: relative;
         // section header
-        &-header {
-            width: 100%;
-            height: 170px;
-            background: $background-light;
-            margin-bottom: 2em;
-            z-index: 2;
-            // section header h1
-            h1 {
-                margin-bottom: 50px;
-                color: $span-gold;
-                text-shadow: 3px 2px 2px #000;
-                font-weight: 900;
-                &::before {
-                    opacity: .7;
-                    top: 2.25em;
-                }
-            }
-            // end of section header h1
-        }
+        // &-header {
+        //     width: 100%;
+        //     height: 170px;
+        //     background: $background-light;
+        //     margin-bottom: 2em;
+        //     z-index: 2;
+        //     // section header h1
+        //     h1 {
+        //         margin-bottom: 50px;
+        //         color: $span-gold;
+        //         text-shadow: 3px 2px 2px #000;
+        //         font-weight: 900;
+        //         &::before {
+        //             opacity: .7;
+        //             top: 2.25em;
+        //         }
+        //     }
+        //     // end of section header h1
+        // }
         // end of section header
         // project items
         .all-projects {
@@ -91,7 +91,7 @@
                         font-size: 1.15em;
                         width: 100%;
                         @media (min-width:1024px){
-                            font-size: 1.5em;
+                            font-size: 1.2rem;
                         }
                         color: $span-gold;
                         font-weight: 900;
@@ -106,16 +106,16 @@
                     // end of project Title (h1)
                     // project details (h2 and p)
                     h2 {
-                        font-size: .9em;
+                        font-size: 1em;
                         line-height: 1.3;
                         font-weight: 500;
                         margin: .8em 0;
                         text-transform: capitalize;
                         color: $text-white-e;
                         transition: .3s;
-                        @media (min-width:768px){
-                            font-size: 1.2em;
-                        }
+                        // @media (min-width:768px){
+                        //     font-size: 1.2em;
+                        // }
                     }
                     
                     p {
@@ -205,7 +205,7 @@
                         height: 100%;
                         width: 100%;
                         background-image: linear-gradient(60deg, #29323c, 0%, #585563 100%);
-                        opacity: .4;
+                        opacity: .6;
                         transition: .5s;
                         z-index: 3;
                     }
