--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -11,7 +11,7 @@ hamburger
     font-size: 10px;
     height: 3.3em;
     width: 3.3em;
-    margin: 5px auto;
+    margin: 1rem auto .5rem;
     display: inline-block;
     border-radius: 50%;
     position: relative;
