--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -61,7 +61,7 @@
                 text-align: center;
                 text-decoration: none;
                 width: 50%;
-                box-shadow: $box-dark-top-sm;
+                box-shadow: $box-light-top-sm;
                 transition: .2s;
 
                 &:hover {
