--- a/scss/style.scss
+++ b/scss/style.scss
@@ -113,7 +113,7 @@ body {
                             border: 2px solid $border;
                             outline: none;
                             padding: 1em 0;
-                            // overflow-y: auto;
+                            overflow-y: auto;
                             // list items active transition
                             li {
                                 transform: translateX(10%);
