--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -58,7 +58,8 @@ $text-valid: #000;
 
 // box-shadows
 $box-light-top-sm: inset 2px 2px 3px #ddda,
-                    inset -2px -2px 3px #000a;
+                    inset -2px -2px 3px #000a,
+                    3px 3px 3px rgba(0, 0, 0, .200);
 
 $box-light-top-bg: inset 4px 4px 5px #ddda,
                     inset -4px -4px 5px #000a;
