--- a/scss/style.scss
+++ b/scss/style.scss
@@ -96,7 +96,7 @@ body {
                         height: 100vh;
                         background-color: $nav-active-background;
                         transition: .5s ease;
-                        // overflow-y: auto;
+                        overflow-y: auto;
 
                         ul {
                             margin: 2em 5vw;
