--- a/css/style.css
+++ b/css/style.css
@@ -268,11 +268,10 @@ hamburger
         display: none; } }
 
 #skills .skills-top {
-  width: 90%;
+  width: 95%;
   text-align: left;
-  padding: .5em 1em 2em;
   padding: .5rem;
-  margin: 2em auto;
+  margin: 2em 1rem;
   background: #29323c;
   backdrop-filter: blur(5px);
   border-radius: 10px;
@@ -298,7 +297,7 @@ hamburger
     outline: none; }
   #skills .skills-top .skills-info p {
     color: #fff;
-    font-size: 1rem;
+    font-size: .85rem;
     line-height: 1.6;
     font-weight: 500;
     background: transparent;
@@ -314,7 +313,8 @@ hamburger
     text-align: center;
     color: #ead2a1; }
     #skills .skills-top .skills-drop .skills-drop-p {
-      color: #ead2a1; }
+      color: #ead2a1;
+      font-size: .9rem; }
   #skills .skills-top::after {
     content: '';
     position: absolute;
