skills top p span

--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -78,7 +78,7 @@
             line-height: 2em;
 
             span {
-                font-size: .85em;
+                // font-size: .85em;
                 color: $span-gold;
             }
             
