--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -75,10 +75,9 @@
             }
             background: transparent;
             overflow: hidden;
-            line-height: 2em;
 
             span {
-                // font-size: .85em;
+                font-size: .9rem;
                 color: $span-gold;
             }
             
