--- a/css/style.css
+++ b/css/style.css
@@ -954,10 +954,16 @@ hamburger
       padding: 5vh 0;
       width: 100%;
       border-radius: 5px; }
+      #work .work-items .work-item[data-scroll] {
+        transition: 1.5s;
+        transform: scale(1); }
       #work .work-items .work-item .work-title {
-        text-align: center;
-        text-transform: capitalize;
-        font-family: "Ubuntu", sans-serif; }
+        text-align: center; }
+        #work .work-items .work-item .work-title h2 {
+          text-transform: capitalize;
+          font-family: "Ubuntu", sans-serif; }
+        #work .work-items .work-item .work-title a {
+          color: #ead2a1; }
       #work .work-items .work-item figure {
         width: 65%;
         height: 65%;
@@ -975,7 +981,7 @@ hamburger
           height: 100%;
           object-fit: contain;
           transition: .3s; }
-      #work .work-items .work-item a {
+      #work .work-items .work-item .view-site-btn {
         border: none;
         outline: none;
         background: linear-gradient(0deg, #20262e, #485563);
@@ -990,8 +996,10 @@ hamburger
         width: 50%;
         box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2);
         transition: .2s; }
-        #work .work-items .work-item a:hover {
+        #work .work-items .work-item .view-site-btn:hover {
           transform: scale(0.95); }
+      #work .work-items .work-item p {
+        text-align: center; }
       #work .work-items .work-item:hover figure img {
         transform: scale(1.05); }
 
