--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -9,9 +9,9 @@ hamburger
 // hamburger toggle
 #header .hamburger {
     font-size: 10px;
-    height: 3.3em;
-    width: 3.3em;
-    margin: 1rem auto .5rem;
+    height: 3.5em;
+    width: 3.5em;
+    margin: .5rem auto .5rem;
     display: inline-block;
     border-radius: 50%;
     position: relative;
