--- a/css/style.css
+++ b/css/style.css
@@ -1589,6 +1589,7 @@ body {
         margin: .5rem 5vw 1rem;
         opacity: 1;
         z-index: 1;
+        height: auto;
         width: 10rem;
         border-radius: 5px;
         position: sticky;
