--- a/scss/style.scss
+++ b/scss/style.scss
@@ -224,7 +224,7 @@ body {
                         margin: .5rem 5vw 1rem;
                         opacity: 1;
                         z-index: 1;
-                        // height: 15%;
+                        height: auto;
                         width: 10rem;
                         border-radius: 5px;
                         position: sticky;
