--- a/css/style.css
+++ b/css/style.css
@@ -1485,7 +1485,7 @@ body {
           padding: 0 5vw; } }
       #header .header #navbar .brand {
         transition: 1s ease;
-        opacity: 1; }
+        opacity: 0; }
         #header .header #navbar .brand .brand-logo {
           border: 1px solid #ead2a1;
           border-radius: 5px;
@@ -1589,7 +1589,6 @@ body {
         margin: .5rem 5vw 1rem;
         opacity: 1;
         z-index: 1;
-        height: auto;
         width: 10rem;
         border-radius: 5px;
         position: sticky;
@@ -1598,9 +1597,11 @@ body {
         transition: 1s ease;
         outline: none;
         overflow: hidden;
-        border: 2px solid #ead2a15e; }
+        border: 2px solid #ead2a15e;
+        background: #29323c; }
         #header .header #navbar .nav-list .links-container .nav-logo img {
-          width: 100%; }
+          width: 100%;
+          height: auto; }
         @media (min-width: 768px) {
           #header .header #navbar .nav-list .links-container .nav-logo {
             width: 20%; } }
