--- a/css/style.css
+++ b/css/style.css
@@ -990,8 +990,7 @@ hamburger
       #work .work-items .work-item .view-site-btn {
         border: none;
         outline: none;
-        background: linear-gradient(0deg, #20262e, #485563);
-        background: linear-gradient(0deg, #3f0d0d, #dc134c);
+        background: #dc143c8c;
         border-radius: 5px;
         color: #fff;
         padding: .35rem;
@@ -1000,10 +999,32 @@ hamburger
         text-align: center;
         text-decoration: none;
         width: 50%;
-        box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2);
-        transition: .2s; }
+        transition: .2s;
+        position: relative;
+        isolation: isolate; }
+        #work .work-items .work-item .view-site-btn::before, #work .work-items .work-item .view-site-btn::after {
+          position: absolute;
+          content: '';
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          border-radius: 5px;
+          transition: .2s;
+          z-index: -1; }
+        #work .work-items .work-item .view-site-btn::before {
+          background: linear-gradient(0deg, #3f0d0d, #dc134c);
+          box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 3px 3px 3px rgba(0, 0, 0, 0.2); }
+        #work .work-items .work-item .view-site-btn::after {
+          background: linear-gradient(0deg, #dc134c, #3f0d0d);
+          box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a, 2px 3px 2px rgba(0, 0, 0, 0.35);
+          opacity: 0; }
         #work .work-items .work-item .view-site-btn:hover {
           transform: scale(0.95); }
+          #work .work-items .work-item .view-site-btn:hover::before {
+            opacity: 0; }
+          #work .work-items .work-item .view-site-btn:hover::after {
+            opacity: 1; }
       #work .work-items .work-item p {
         text-align: center; }
       #work .work-items .work-item:hover figure img {
