--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -67,8 +67,7 @@
                 // border: 1px solid blue;
                 border: none;
                 outline: none;
-                background: $overlay-btn;
-                background: $button-crimson;
+                background: $span-crimson-dark;
                 border-radius: 5px;
                 color: $text-light;
                 padding: .35rem;
@@ -77,11 +76,35 @@
                 text-align: center;
                 text-decoration: none;
                 width: 50%;
-                box-shadow: $box-light-top-sm;
                 transition: .2s;
-
+                position: relative;
+                isolation: isolate;
+                
+                // BUTTON PSEUDO SHADOWS AND BG
+                &::before, &::after {
+                    position: absolute;
+                    content: '';
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 5px;
+                    transition: .2s;
+                    z-index: -1;
+                }
+                &::before {
+                    background: $button-crimson;
+                    box-shadow: $box-light-top-sm;
+                }
+                &::after {
+                    background: $button-crimson-hover;
+                    box-shadow: $box-light-top-sm-hover;
+                    opacity: 0;
+                }
                 &:hover {
                     transform: scale(.95);
+                    &::before {opacity: 0;}
+                    &::after {opacity: 1;}
                 }
             }
 
