--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -77,6 +77,7 @@
                 text-decoration: none;
                 width: 50%;
                 transition: .2s;
+                letter-spacing: .05rem;
                 position: relative;
                 isolation: isolate;
                 
@@ -103,6 +104,7 @@
                 }
                 &:hover {
                     transform: scale(.95);
+                    letter-spacing: normal;
                     &::before {opacity: 0;}
                     &::after {opacity: 1;}
                 }
