--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -121,7 +121,7 @@
                     p {
                         font-size: .8em;
                         @media (min-width:768px){
-                            font-size: 1em;
+                            font-size: .9em;
                         }
                         font-weight: 200;
                         color: $text-white-d;
