--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -64,7 +64,7 @@
                     }
                 }
                 // end of project items on desktop : row
-                margin: 20px auto;
+                margin: 1.5rem auto;
                 overflow: hidden;
                 border-radius: 5px;
                 // project tile
