--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -9,9 +9,10 @@
     .work-items {
         display: grid;
         grid-template-columns: 1fr;
-        gap: 1rem;
+        gap: 10vh;
         @media (min-width: 768px) {
         grid-template-columns: 1fr 1fr 1fr;
+        gap: 1rem;
 
         }
         .work-item {
